# distributed-file-storage-server

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml  start.sh
.sqlx/: query-34d909b918a726e7be7d969de2cc94645fbe07ed203a948f3fef40e1fdea51c6.json  query-5ec80b1e1708108eadf469d1292ef1f7bef560849826664660041485e7a3771c.json  query-776527903d72a22150e2300d7dbf22b492ee520723f28e80730534f95e2c1950.json  query-c88d11277bf7e07a6a288378b058ee4934a6da34e93f084c6334eafbedcc66b0.json
migrations/: 20241004065447_create_file_chunks_table.sql  20241004100850_add_file_extension.sql
src/: error.rs  main.rs
src/api/: download.rs  get_files.rs  mod.rs  upload.rs
