[package]
name = "distributed_file_storage_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
derive_more = { version = "1.0.0", features = ["from", "display"] }
dotenv = "0.15.0"
infer = "0.16.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "postgres", "uuid", "migrate"] }
tokio = { version = "1.40.0", features = ["full"] }
utoipa = { version = "4.2.3", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
